--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "description": "Angular Cytoscape",
   "repository": "https://github.com/johnnyflinn/ngCytoscape",
   "license": "MIT",
+  "peerDependencies": {
+    "cytoscape":"^2.7.6"
+  },
   "dependencies": {
     "angular":"^1.5.7",
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
-    "angular-route": "~1.5.0",
-    "cytoscape":"^2.7.6"
+    "angular-route": "~1.5.0"
   },
   "devDependencies": {
     "bower": "^1.3.1",
